assets/css/style.css
h1, h2, h3 {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: #4aaaa5;
}

h1 {
    font-size: 30px;
}

h2 {
    font-size: 24px;
}

h3 {
    font-size: 18px;
}

hr {
    height: 2px;
    background: #777777;
    opacity: .6;
    border: none;
    margin: 0;
    padding: 0;
}

#wrapper {
    padding: 0;
    margin: 0;
    margin-bottom: -50px;
    min-height: 100%;
    margin-bottom: -100px;
    background-image: url(../images/background/fabric_of_squares_gray.png);
}

#wrapper:after {
    content:"";
    display: block;
    height: 100px;
}

html, body {
    font-family: 'Arial', 'Helvectica Neue', Helvectica, sans-serif;
    color: #777777;
    padding:0;
    margin:0;
    height: 100%;
    overflow: auto;
}

header {
    width: 100%;
    height: 100px;
    background: #fff;
    border-bottom: 2px solid #ccc;
    padding: 0;
    text-align: center;
}

.header_container {
    width: 960px;
    position: relative;
    margin-left:auto;
    margin-right: auto;
    height: 100px;
    margin-top: 0;
    padding-top: 0;
}

header h1 {
    height: 100px;
    width: 250px;
    line-height: 100px;
    background: #4aaaa5;
    color: #fff;
    margin-left: 0;
    margin-top: 5px;
}

header .header_nav {
    position: absolute;
    height: 100px;
    padding: 0;
    margin:0;
    right: 0;
    top:0px;
}

header ul {
    list-style-type: none;
    margin:0;
    padding: 40px 0 40px 40px;
    height: 100px;
    overflow: hidden;
}

header li {
    float: left;
    line-height: 20px;
    padding: 0 15px;
    border-right: .5px solid #777;
}

header li:last-child {
    border-right: none;
}

header li a {
    display: block;
    text-decoration: none;
    color: #777;
    background: #fff;
}

header li a:hover {
    background: #e5e5e5;
}

.container {
    width: 960px;
    margin: auto;
    padding: 20px 0;
    overflow: hidden;
}

.main_section {
    width: 610px;
    background: #fff;
    padding: 20px;
    float: left;
}

.main_section #bio_img {
    padding: 0px;
    margin-left: 0;
    float: left;
}

.main_section #bio_img img {
    padding: 0;
    margin: 0;
}

.main_section #portfolio_images {
    list-style-type: none;
    padding: 10px 0;
    margin: 0;
    overflow: auto;
}

.main_section #portfolio_images li {
    float: left;
    padding: 20px 0;
    height: 180px;
    position: relative;
}

.main_section #portfolio_images li:nth-child(even) {
    margin-left: 40px;
}

.main_section #portfolio_images figure {
    margin:0;
    height: 180px;
}

.main_section #portfolio_images figcaption {
    margin:-60px 0 0 0;
    position: absolute;
    background: #4aaaa5;
    color: #fff;
    font-size: 20px;
    font-family: serif;
    height: 50px;
    width: 285px;
    text-align: center;
    line-height: 50px;
}

.main_section form {
    padding: 20px 0;
}

.main_section form input {
    margin: 10px 0;
    padding: 10px 10px;
    width: 100%;
    border: #ccc 1px solid;
    box-sizing: border-box;
    color: black;
}

.main_section form input::placeholder {
    color: #ccc;
}

.main_section textarea {
    height: 200px;
    text-align: left;
    margin: 10px 0;
    padding: 10px 10px;
    width: 100%;
    border: #ccc 1px solid;
    box-sizing: border-box;
    color: black;
}

.main_section input[type=submit] {
    color: #fff;
    background: #4aaaa5;
    padding: 10px 20px;
    width: 20%;
    font-size: 18px;
}

.sidebar {
    width: 230px;
    float: left;
    margin-left: 40px;
    padding: 20px;
    background: #fff;
}

.social_nav {
    list-style-type: none;
    padding: 10px 10px;
    margin: auto;
    height: 60px;
}

.social_nav li {
    float: left;
    padding-right: 15px;
}


.social_nav li:last-child {
    padding-right: 0;
}

.footer {
    position: fixed;
    bottom: 0;
    background:#666;
    color: #fff;
    border-top: 5px solid #4aaaa5;
    height: 100px;
    width: 100%;
    line-height: 100px;
    clear: both;
    text-align: center;
}

